Dhananjay singh 29_04_2025 20_34_PM
 29_04_2025 20_34_PM

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,7 +73,8 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="mykaimealplanner.onelink.me" />
+                <!--<data android:scheme="https" android:host="mykaimealplanner.onelink.me" />-->
+                <data android:scheme="mykai" android:host="property" />
          <!--       <data android:scheme="mykai" android:host="property" />-->
                <!-- <data
                     android:scheme="https"
