--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 28 10:27:53 IST 2025
-sdk.dir=C\:\\Users\\YES IT Labs\\AppData\\Local\\Android\\Sdk
+#Wed May 07 21:15:42 IST 2025
+sdk.dir=/Users/deepakagrahari/Library/Android/sdk
